--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8"/>
-<title>个人主页</title>
+	<meta charset="utf-8"/>
+	<title>Ajax</title>
 </head>
 <body>
-Hello World!
+	<div id="new"></div>
+	<script src="scripts/addLoadEvent.js"></script>
+	<script src="scripts/getHTTPObject.js"></script>
+	<script src="scripts/getNewContent.js"></script>
 </body>
 </html>
