--- a/flower.html
+++ b/flower.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>YML</title>
+<title>A Gift to My Girl YML</title>
 <meta charset="utf-8">
+<style>
+.outer {
+	background: cadetblue;
+	padding: 20px;
+}
+canvas {
+	display: block;
+	margin: auto;
+	border: 1px solid pink;
+	border-radius: 16px;
+}
+</style>
 </head>
 <body>
-<canvas id="c" height="520" width="520"></canvas>
+<div class="outer">
+	<canvas align="center" id="c" height="520" width="520"></canvas>
+</div>
 <script>
 var b = document.body;
 var c = document.getElementsByTagName('canvas')[0];
