--- a/webgl.html
+++ b/webgl.html
@@ -3,14 +3,12 @@
 <head>
 <title>WebGL Study</title>
 <meta charset="utf-8">
+<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
 </head>
 <body>
 <div class="outer">
 	<canvas align="center" id="glcanvas" height="520" width="520"></canvas>
 </div>
 <script src="js/mygl.js"></script>
-<script>
-	main();
-</script>
 </body>
 <html>
