--- a/webgl.html
+++ b/webgl.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>WebGL Study</title>
-<meta charset="utf-8">
-<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+	<title>WebGL Study</title>
+	<meta charset="utf-8">
+	<meta http-equiv="Permissions-Policy" content="interest-cohort=()">
+	<link rel="stylesheet" href="css/mygl.css" type="text/css" />
 </head>
 <body>
-<div class="outer">
-	<canvas align="center" id="glcanvas" height="520" width="520"></canvas>
-</div>
-<script src="js/mygl.js"></script>
+	<div class="outer">
+		<canvas align="center" id="glcanvas" height="520" width="520"></canvas>
+	</div>
+	<script src="js/mygl.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
 </body>
 <html>
+ 
