--- a/webgl.html
+++ b/webgl.html
@@ -10,7 +10,7 @@
 	<div class="outer">
 		<canvas align="center" id="glcanvas" height="520" width="520"></canvas>
 	</div>
-	<script src="js/mygl.js"></script>
+	<script src="js/mygl.js" type="module" defer></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gl-matrix/2.8.1/gl-matrix-min.js" integrity="sha512-zhHQR0/H5SEBL3Wn6yYSaTTZej12z0hVZKOv3TwCUXT1z5qeqGcXJLLrbERYRScEDDpYIJhPC1fk31gqR783iQ==" crossorigin="anonymous" defer></script>
 </body>
 <html>
